aws/vpc/template-single-az.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  IWVPNServerCertificateARN:
    Description: Link to certificate in AWS Certificate Manager for VPN server
    Type: String
  IWClientRootCertificateChainArn:
    Description: Link to certificate in AWS Certificate Manager for VPN client
    Type: String
  ECConnectInstanceIP:
    Description: EC2 Connect Instance service IP in region
    Type: String
  IWAMIPrivateKeyName:
    Description: Private Key Name
    Type: String
  IWAMIID:
    Description: AMI ID
    Type: String
  IWVPCCIDR:
    Description: CIDR block for VPC network
    Type: String
  IWVPNCIDR:
    Description: CIDR block for VPN network
    Type: String
  IWPrivateAZoneSubnetRange:
    Description: CIDR for private subnet in A zone
    Type: String
  IWPublicAZoneSubnetRange:
    Description: CIDR for public subnet in A zone
    Type: String
Resources:
  IWVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref IWVPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}-vpc"

  IWInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}-internet-gateway"

  IWInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IWInternetGateway
      VpcId: !Ref IWVPC

  #
  # Private Subnets
  #
  IWPrivateAZoneSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref IWVPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref IWPrivateAZoneSubnetRange
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-private-subnet"

  #
  # Public Subnets
  #
  IWPublicAZoneSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref IWVPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref IWPublicAZoneSubnetRange
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-public-subnet"

  #
  # Elastic IP addresses
  # Allowed to create new one for now. Other EIPs will be attached later
  #
  IWAZoneElasticIP:
    Type: AWS::EC2::EIP
    DependsOn: IWInternetGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-eip"

  #
  # NAT gateways
  #
  IWAZoneNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt IWAZoneElasticIP.AllocationId
      SubnetId: !Ref IWPublicAZoneSubnet
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-nat-gateway"

  #
  # Route tables
  #
  IWPrivateAZoneRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref IWVPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-route-table"


  IWPublicAZoneRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref IWVPC
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-public-route-table"

  #
  # Route table associations
  #
  IWPrivateAZoneSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref IWPrivateAZoneRouteTable
      SubnetId: !Ref IWPrivateAZoneSubnet

  IWPublicAZoneSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref IWPublicAZoneRouteTable
      SubnetId: !Ref IWPublicAZoneSubnet

  #
  # Routes
  #
  IWPrivateAZoneRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref IWPrivateAZoneRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref IWAZoneNatGateway

  IWPublicAZoneRoute:
    Type: AWS::EC2::Route
    DependsOn: IWInternetGatewayAttachment
    Properties:
      RouteTableId: !Ref IWPublicAZoneRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IWInternetGateway

  #
  # Security Groups
  #
  IWWebSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId:
        Ref: IWVPC
      GroupName: !Sub "${AWS::StackName}-${AWS::Region}a-web.sg"
      GroupDescription: HTTP & HTTPS access
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
          Description: HTTP
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
          Description: HTTPS
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-web.sg"

  IWShellSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId:
        Ref: IWVPC
      GroupName: !Sub "${AWS::StackName}-${AWS::Region}a-ssh.sg"
      GroupDescription: SSH access
      SecurityGroupIngress:
        - CidrIp: !Ref ECConnectInstanceIP
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
          Description: SSH
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-ssh.sg"

  #
  # Load Balancer NGINX that forwards connections to private zone, automatic, initialized via script?
  #
  IWLoadBalancerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref IWAMIID
      InstanceType: t3.micro
      SubnetId: !Ref IWPublicAZoneSubnet
      KeyName: 
        Ref: IWAMIPrivateKeyName
      SecurityGroupIds: 
        - !GetAtt IWWebSecurityGroup.GroupId
        - !GetAtt IWShellSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-${AWS::Region}a-load-balancer"
      UserData:
        Fn::Base64: |
          #!/bin/bash -xe
          #
          # Packages
          #
          sudo yum -y install epel-release
          sudo yum -y install \
              bc \
              certbot python3-certbot-nginx \
              elinks \
              firewalld \
              gettext \
              git \
              htop \
              nginx \
              npm \
              openscap openscap-scanner openscap-utils \
              scap-security-guide \
              screen \
              s3cmd \
              vim \
              wget \
              unzip

          # 
          # EC2 Instance Connect
          # Might need no additional access from anywhere else
          # 
          wget https://amazon-ec2-instance-connect-us-west-2.s3.us-west-2.amazonaws.com/latest/linux_amd64/ec2-instance-connect.rpm
          wget https://amazon-ec2-instance-connect-us-west-2.s3.us-west-2.amazonaws.com/latest/linux_amd64/ec2-instance-connect-selinux.noarch.rpm
          sudo yum install -y ec2-instance-connect.rpm
          sudo yum install -y ec2-instance-connect-selinux.noarch.rpm

          #
          # Services
          #
          sudo systemctl enable firewalld
          sudo systemctl enable nginx
          sudo systemctl restart firewalld
          sudo systemctl restart nginx

          #
          # Firewall 
          #
          sudo firewall-cmd --set-default-zone=drop
          sudo firewall-cmd --add-service ssh
          sudo firewall-cmd --add-service ssh --permanent
          sudo firewall-cmd --add-service http
          sudo firewall-cmd --add-service http --permanent
          sudo firewall-cmd --add-service https
          sudo firewall-cmd --add-service https --permanent

          #
          # PCI-DSS benchmark
          #
          sudo oscap xccdf eval \
            --fetch-remote-resources \
            --remediate \
            --profile xccdf_org.ssgproject.content_profile_pci-dss \
            --results scan-results.xml \
            /usr/share/xml/scap/ssg/content/ssg-almalinux9-ds.xml

  #
  # VPN server with automatic configuration
  #
  IWClientVPNInstance:
    Type: AWS::EC2::ClientVpnEndpoint
    Properties:
      AuthenticationOptions:
        - Type: certificate-authentication
          MutualAuthentication:
            ClientRootCertificateChainArn: !Ref IWClientRootCertificateChainArn        
      ClientCidrBlock: !Ref IWVPNCIDR
      ClientLoginBannerOptions:
        Enabled: true 
        BannerText: !Sub "You are now connected to ${AWS::Region}a VPC"
      ConnectionLogOptions: 
        Enabled: false
      Description: !Sub "VPN server for ${AWS::Region}a zone"
      SelfServicePortal: String
      ServerCertificateArn: !Ref IWVPNServerCertificateARN
      TagSpecifications:
        - ResourceType: client-vpn-endpoint
          Tags:
            - Key: Name
              Value: !Sub "${AWS::StackName}-${AWS::Region}a-vpn"
      VpcId: !Ref IWVPC
      VpnPort: 443

  IWClientVpnTargetNetworkAZoneAssociation:
    Type: AWS::EC2::ClientVpnTargetNetworkAssociation
    Properties:
      ClientVpnEndpointId: !Ref IWClientVPNInstance
      SubnetId: !Ref IWPrivateAZoneSubnet

  IWClientVpnAuthorizationRule:
    Type: "AWS::EC2::ClientVpnAuthorizationRule"
    Properties:
      ClientVpnEndpointId: 
        Ref: IWClientVPNInstance
      AuthorizeAllGroups: true
      TargetNetworkCidr: "0.0.0.0/0"
      Description: !Sub "${AWS::StackName}-${AWS::Region}a-vpn-auth-rule"


#
# NACL for subnets
#

#
# DNS name resolution in private & public subnet. Might be not required due to "hosts" nature
#

#
# Static IP addereses for instaces
#
